tests/error/type_errors/binary_not_arith_right.err
Guppy compilation failed. Error in file $FILE:6

4:    @compile_guppy
5:    def foo(x: int) -> int:
6:        return x + True
                 ^^^^^^^^
GuppyTypeError: Binary operator `+` not defined for arguments of type `int` and `bool`
